instructions.Instructions.scala.code
baisserBrosse()
avance()
avance()
droite()
avance()
avance()
droite()
avance()
avance()
droite()
avance()
droite()
baisserBrosse()
avance()
